--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ nav {
 
 #navbar ul {
     display: flex;
-    flex-direction: row-reverse;
+    justify-content: flex-end;
     align-items: center;
     list-style: none;
     font-size: 20px;
@@ -79,7 +79,6 @@ nav {
     flex-basis: 100%;
     flex: 1;
     border-right: 5px solid var(--primary-color);
-    margin: 5px;
 }
 
 .right-column {
@@ -87,6 +86,8 @@ nav {
     flex-direction: column;
     flex-basis: 100%;
     flex: 2;
+    margin: 100px;
+    padding-right: 450px;
 }
 
 #contactLink a {
@@ -115,25 +116,30 @@ nav {
 .collabproject-tile {
     text-align: center;
     display: flex;
-    flex-direction: column;
-    justify-items: center;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-items: left;
+    flex: 1 1 1;
+    height: 100px;
+    color: var(--quaternary-color);
+    font-weight: bold;
 }
 
 .collabproject-tile a {
     color: var(--tertiary-color);
     font-weight: bold;
+    font-size: 22px;
 }
 
 .collabproject-tile a:hover {
     color: var(--secondary-color);
+    opacity: .5;
 }
 
 img {
-    height: 50%; 
+    height: 40%; 
     width: auto; 
-    max-width: 300px; 
-    max-height: 300px;
+    max-width: 250px; 
+    max-height: 250px;
 }
 
 img:hover {
