--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,12 @@
     --quaternary-color: #779ecb;
 }
 
+
 h1 {
     color: var(--primary-color);
     text-align: center;
     font-size: 44px;
+    padding-top: 100px;
 }
 
 h2 {
@@ -25,6 +27,7 @@ h3 {
     color: var(--secondary-color);
     text-align: center;
     font-size: 26px;
+    padding-bottom: 80px;
 }
 
 a {
@@ -87,7 +90,7 @@ nav {
     flex-basis: 100%;
     flex: 2;
     margin: 100px;
-    padding-right: 450px;
+    padding-right: 350px;
 }
 
 #contactLink a {
@@ -95,7 +98,7 @@ nav {
     color: var(--tertiary-color);
     font-weight: bold;
     text-align: center;
-    font-size: 20px;
+    font-size: 22px;
     margin: 0 15px;
 }
 
@@ -140,6 +143,8 @@ img {
     width: auto; 
     max-width: 250px; 
     max-height: 250px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 img:hover {
